<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <chapters.ui.view.ViewToolbar
        android:id="@+id/viewToolbar"
        android:layout_width="match_parent"
        app:titleToolbar="@string/log_in"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/font_35" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/middle_margin"
            android:gravity="center"
            android:text="Account Login"
            android:textColor="@color/textColorSmall"
            android:textSize="@dimen/font_24" />

        <chapters.ui.view.ViewItemEdit
            android:id="@+id/viewUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            app:hintItem="@string/userName"
            app:iconItem="@drawable/ic_email" />


        <chapters.ui.view.ViewItemEdit
            android:id="@+id/viewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:hintItem="@string/password"
            app:iconItem="@drawable/ic_lock"
            app:isPassword="true" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/widht_indicator"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/middle_margin"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textSize="@dimen/font_15" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_here"
                android:textColor="@color/blue"
                android:textSize="@dimen/font_15"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_get_started"
                android:textSize="@dimen/font_15" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/middle_margin"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgoten_password"
                android:textSize="@dimen/font_15" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_here"
                android:textColor="@color/blue"
                android:textSize="@dimen/font_15"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_reset_it"
                android:textSize="@dimen/font_15" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>