<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <chapters.ui.view.ViewToolbar
        android:id="@+id/viewToolbar"
        android:layout_width="match_parent"
        app:titleToolbar="@string/forgoten_password"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/font_35"
            android:gravity="center"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:text="Password Reset"
            android:textColor="@color/textColorSmall"
            android:textSize="@dimen/font_24"
            android:gravity="center"
            android:layout_marginTop="@dimen/middle_margin"
            android:layout_height="wrap_content" />

        <chapters.ui.view.ViewItemEdit
            android:id="@+id/viewEmal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:iconItem="@drawable/ic_email"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            app:hintItem="@string/email" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/middle_margin"
            android:text="@string/email_info_reset"
           />


        <chapters.ui.view.ViewItemEdit
            android:id="@+id/viewDateBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:enableEnter="false"
            app:iconItem="@drawable/ic_calendar"
            app:hintItem="@string/date_birthday"
            app:onlySee="true"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/middle_margin"
            android:text="@string/date_info_reset"
            />

<android.support.v7.widget.AppCompatButton
    android:id="@+id/btnReset"
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/widht_indicator"
    android:text="@string/reset_password"
    android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>