<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/middle_margin"
        android:layout_marginRight="@dimen/middle_margin"
        android:paddingTop="@dimen/activity_horizontal_margin">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/ic_smile_big" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivLogo"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/font_35" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/hourse_24"
            android:textColor="@color/white"
            android:textSize="@dimen/font_20"
            android:layout_marginTop="@dimen/middle_margin"
            android:layout_below="@+id/tv"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_info"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_below="@+id/tv2"
            android:textSize="@dimen/font_15" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/space_middle"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/middle_margin"
            android:layout_weight="1"
            android:background="@drawable/selector_button_round"
            android:text="@string/sing_up" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/middle_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:background="@drawable/shape_white"
            android:text="@string/login" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvInfo"
        android:layout_margin="@dimen/middle_margin2"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/info_1"
            android:textColor="@color/white"
            android:textSize="@dimen/font_15" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/info_2"
            android:textColor="@color/white"
            android:textSize="@dimen/font_15" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/info_3"
            android:textColor="@color/white"
            android:textSize="@dimen/font_15" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvInfo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_big"
        android:layout_alignParentBottom="true"
        android:background="@color/black_aplha"
        android:gravity="center"
        android:text="@string/ltd_info"
        android:textColor="@color/white"
        android:textSize="@dimen/font_17" />
</RelativeLayout>