<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:orientation="vertical">

    <chapters.ui.view.ViewToolbar
        android:id="@+id/viewToolbar"
        android:layout_width="match_parent"
        app:title=""
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_middle"
        android:gravity="center"
        android:text="@string/welcome_name"
        android:textColor="@color/black"
        android:textSize="@dimen/font_35"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/welcome_info"
        android:textColor="@color/black"
        android:textSize="@dimen/font_17" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvSkip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/skip"
        android:textColor="@color/blue"
        android:textSize="@dimen/font_17"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnGrantAccess"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/selector_button_round"
        android:layout_marginLeft="@dimen/space_middle"
        android:text="@string/grant_access"
        android:layout_marginRight="@dimen/space_middle"
        android:layout_height="wrap_content" />


</LinearLayout>