<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <chapters.ui.view.ViewToolbar
        android:id="@+id/viewToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_middle"
        android:gravity="center"
        android:text="@string/people_to_follow"
        android:textColor="@color/black"
        android:textSize="@dimen/font_35"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/people_info"
        android:textColor="@color/black"
        android:textSize="@dimen/font_17" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvSkip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/skip"
        android:textColor="@color/blue"
        android:textSize="@dimen/font_17"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvFollowing"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/middle_margin"
        android:layout_marginRight="@dimen/middle_margin"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>